# ReadsProfiler

./: CMakeLists.txt  Makefile  README.md  client  main.db  main.py  server
.git-old/: COMMIT_EDITMSG  config  index
.git-old/logs/: HEAD
.git-old/logs/refs/heads/: main  master
.git-old/logs/refs/remotes/origin/: main  master
.git-old/refs/heads/: master
.git-old/refs/remotes/origin/: main  master
Client/: Client.cpp  Client.h  ClientNetwork.cpp  ClientNetwork.h  client.cpp  client1  main.cpp
Server/: Command.cpp  Command.h  Database.cpp  Database.h  Register.cpp  Register.h  Server.cpp  Server.h  ServerNetwork.cpp  ServerNetwork.h  main.cpp
Server/Commands/: Command.cpp  Command.h  Download.cpp  Download.h  Login.cpp  Login.h  Register.cpp  Register.h  Search.cpp  Search.h  Upload.cpp  Upload.h  View.cpp  View.h
